--- a/Aktuell.html
+++ b/Aktuell.html
@@ -17,7 +17,7 @@
 		<section>		
 				<div id="headline"><a href="Aktuell.html">Dyren</a></div>			
 			<ul class="menu">
-				<div id="space"><a>➥</a></div>		
+				<div id="space"><a></a></div>		
 				<li><a href="aktuell.html">Aktuell</a></li>
 				<li><a href="#">Team</a>
 						<ul id="ddt">
