--- a/Aktuell.html
+++ b/Aktuell.html
@@ -2,27 +2,27 @@
 
 <html>
     <head>
-		<link rel="icon" type="image/vnd.microsoft.icon" href="icons/icon.ico">
+		<link rel="icon" type="image/vnd.microsoft.icon" href="/icons/icon.ico">
 		<title>Dyren | Aktuell</title>
-		<link rel="stylesheet" href="style.css" type="text/css">
+		<link rel="stylesheet" href="/style.css" type="text/css">
 		<meta charset ="utf-8">
     </head>
 	
 	<body>
 		<div id="website">
 		<header>
-			<img src="Bilder/banner.png">
+			<img src="/Bilder/banner.png">
 		</header>
 		
 		<section>		
-				<div id="headline"><a href="Aktuell.html">Dyren</a></div>			
+				<div id="headline"><a href="/Aktuell.html">Dyren</a></div>			
 			<ul class="menu">
 				<div id="space"><a></a></div>		
-				<li><a href="aktuell.html">Aktuell</a></li>
+				<li><a href="/aktuell.html">Aktuell</a></li>
 				<li><a href="#">Team</a>
 						<ul id="ddt">
-							<li><img src="Icons/Team.png" width="25"><a href="Team.html">DyrenTeam</a></li>
-							<li><img src="Icons/Bewerbung.png" width="25"><a href="Bewerbung.html">Bewerbung</a></li>
+							<li><img src="/Icons/Team.png" width="25"><a href="/Team.html">DyrenTeam</a></li>
+							<li><img src="/Icons/Bewerbung.png" width="25"><a href="/Bewerbung.html">Bewerbung</a></li>
 						</ul></li>
 				<li><a href="Feedback.html">Feedback</a></li>
 				<li><a href="#">BETA</a>
