--- a/Aktuell.html
+++ b/Aktuell.html
@@ -21,8 +21,8 @@
 				<li><a href="/aktuell.html">Aktuell</a></li>
 				<li><a href="#">Team</a>
 						<ul id="ddt">
-							<li><img src="/Icons/Team.png" width="25"><a href="/Team.html">DyrenTeam</a></li>
-							<li><img src="/Icons/Bewerbung.png" width="25"><a href="/Bewerbung.html">Bewerbung</a></li>
+							<li><img src="Icons/Team.png" width="25"><a href="/Team.html">DyrenTeam</a></li>
+							<li><img src="Icons/Bewerbung.png" width="25"><a href="/Bewerbung.html">Bewerbung</a></li>
 						</ul></li>
 				<li><a href="Feedback.html">Feedback</a></li>
 				<li><a href="#">BETA</a>
