changed Aktuell to /index.html links

--- a/Aktuell.html
+++ b/Aktuell.html
@@ -15,27 +15,27 @@
 		</header>
 		
 		<section>		
-				<div id="headline"><a href="/Aktuell.html">Dyren</a></div>			
+				<div id="headline"><a href="/index.html">Dyren</a></div>			
 			<ul class="menu">
 				<div id="space"><a></a></div>		
-				<li><a href="/aktuell.html">Aktuell</a></li>
+				<li><a href="/index.html">Aktuell</a></li>
 				<li><a href="#">Team</a>
 						<ul id="ddt">
-							<li><img src="Icons/Team.png" width="25"><a href="/Team.html">DyrenTeam</a></li>
-							<li><img src="Icons/Bewerbung.png" width="25"><a href="/Bewerbung.html">Bewerbung</a></li>
+							<li><img src="Icons/Team.png" width="25" alt="Team"><a href="/Team.html">DyrenTeam</a></li>
+							<li><img src="Icons/Bewerbung.png" width="25" alt="Bewerbung"><a href="/Bewerbung.html">Bewerbung</a></li>
 						</ul></li>
 				<li><a href="Feedback.html">Feedback</a></li>
 				<li><a href="#">BETA</a>
 						<ul id="ddb">
-							<li><img src="Icons/warning.png" width="25"><a href="beta.html">Bedwars</a></li>
+							<li><img src="Icons/warning.png" width="25" alt="Warnung"><a href="beta.html">Bedwars</a></li>
 						</ul></li>
-				<li><a href="https://dyren.de/ost2/index.php" target="_blank">Support</a></li>
+				<li><a href="https://dyren.de/ost2/index.php" rel="noopener noreferrer" target="_blank">Support</a></li>
 				<li id="socialmedia"><a href="#">SocialMedia</a>
 						<ul id="ddsc">
-							<li><img src="Icons/youtube.png" width="25"><a href="https://www.youtube.com/channel/UC41T53KoOcqJDZkCEncel4w?view_as=subscriber" target="_blank">Youtube</a></li>
+							<li><img src="Icons/youtube.png" width="25"><a href="https://www.youtube.com/channel/UC41T53KoOcqJDZkCEncel4w" rel="noopener noreferrer" target="_blank">Youtube</a></li>
 							<li><img src="Icons/teamspeak.png" width="25"><a href="ts3server://dyren.de" alt="https://www.teamspeak.de/download/">Teamspeak</a></li>
-							<li><img src="Icons/instagram.png" width="25"><a href="https://www.instagram.com/dyren.de/" target="_blank">Instagram</a></li>
-							<li><img src="Icons/twitter.png" width="25"><a href="https://www.twitter.com/dyren.de" target="_blank">Twitter</a></li>
+							<li><img src="Icons/instagram.png" width="25"><a href="https://www.instagram.com/dyren.de/" rel="noopener noreferrer" target="_blank">Instagram</a></li>
+							<li><img src="Icons/twitter.png" width="25"><a href="https://www.twitter.com/dyren.de" rel="noopener noreferrer" target="_blank">Twitter</a></li>
 							<li><img src="Icons/mail.png" width="25"><a href="mailto:info@dyrenmail.de">DyrenMail</a></li>
 						</ul></li>
 			</ul>
