--- a/Feedback.html
+++ b/Feedback.html
@@ -14,10 +14,10 @@
 			<img src="Bilder/banner.png">
 		</header>
 		<section>
-		<div id="headline"><a href="Aktuell.html">Dyren</a></div>			
+		<div id="headline"><a href="/index.html">Dyren</a></div>			
 				<ul class="menu">
 				<div id="space"><a>➥</a></div>		
-				<li><a href="aktuell.html">Aktuell</a></li>
+				<li><a href="index.html">Aktuell</a></li>
 				<li><a href="#">Team</a>
 						<ul id="ddt">
 							<li><img src="Icons/Team.png" width="25"><a href="Team.html">DyrenTeam</a></li>
